Fix error logic

Check whether write succeeded instead of checking for errorString.

QImageWriter's error enum is broken, it is always UnknownError if there
was no error thus there is always an errorString.

BUG: 503821